# Tools-For-Computational-Biology

./: README.md
NussinovFolding/: scoringFunc1  scoringFunc2
NussinovFolding/debug/: CMakeLists.txt
NussinovFolding/release/: CMakeLists.txt
distMat/: pen
distMat/debug/: CMakeLists.txt
distMat/release/: CMakeLists.txt
source/: _thread.hpp  commons.hpp  distMat.cpp  externs.cpp  nussinov_dp.cpp  nussinov_dp.hpp  nussinov_folding.cpp
